--- a/app/globals.css
+++ b/app/globals.css
@@ -4,13 +4,17 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #333333;
+  --primary: #522ffe;
+  --card: #ffffff;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #030304;
+    --foreground: #ffffff;
+    --primary: #522ffe;
+    --card: #1d1d1d;
   }
 }
 
