hero section : intro

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,4 +29,7 @@ body {
   .circle-icon {
     @apply flex items-center justify-center rounded-full w-11 md:w-14  h-11 md:h-14 bg-[#f4ebff] bg-opacity-[12%] absolute;
   }
+  .highlight {
+    @apply bg-primary text-white px-5 rounded;
+  }
 }
